# tcp_transfer

./: .gitignore  .gitignore.txt  CMakeLists.txt  Launch GUI.bat  README.md  device_info.json  paired_devices.json
android-app/: README.md  local.properties
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/lantransfer/: MainActivity.kt
android-app/app/src/main/java/com/example/lantransfer/model/: Models.kt
android-app/app/src/main/java/com/example/lantransfer/network/: AndroidReceiverServer.kt  BroadcastTargets.kt  ConnectionCodeResolver.kt  DesktopDiscoveryScanner.kt  (+1 more)
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
desktop-gui/: LanTransfer.Gui.csproj  MainForm.cs  Program.cs  README.md
src/: main.cpp
src/app/: file_receiver.cpp  file_receiver.h  file_sender.cpp  file_sender.h
src/common/: file_utils.cpp  file_utils.h  protocol.cpp  protocol.h  types.h
src/config/: settings.cpp  settings.h
src/discovery/: code_lookup_service.cpp  code_lookup_service.h  connection_code.cpp  connection_code.h  device_discovery.cpp  device_discovery.h  presence_announcer.cpp  presence_announcer.h
src/net/: socket.cpp  socket.h
src/pairing/: pair_store.cpp  pair_store.h  pairing_manager.cpp  pairing_manager.h
src/security/: path_sanitizer.cpp  path_sanitizer.h  rate_limiter.cpp  rate_limiter.h  security_manager.cpp  security_manager.h
tools/: LanTransferLauncher.ps1
(+2 files in other folders)
